fix NPE and test